--- a/styles.css
+++ b/styles.css
@@ -11,4 +11,25 @@ body {
   font-family: "Lexend Deca", sans-serif;
   font-size: 15px;
   font-weight: 400;
+  width: 100vw;
+  height: 100vh;
+}
+
+main {
+  width: 100%;
+  height: calc(100vh - 100px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 800px;
+  display: flex;
+}
+
+footer {
+  width: 100%;
+  height: 100px;
+  text-align: center;
 }
